--- a/style.css
+++ b/style.css
@@ -74,6 +74,9 @@ body {
   font-weight: 400;
   line-height: 1.4;
   color: var(--main-white);
+  background: url(background2.jpg) no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 h1,
